--- a/style.css
+++ b/style.css
@@ -20,34 +20,35 @@ body
 .container
 {
     width: 95%;
-    max-width: 1200px;
+    max-width: 1500px;
     margin: 0 auto;
     overflow: hidden;
-    padding: 80px 0;
+    padding: 50px 0;
 }
 .container--header
 {
     padding: 0;
+    margin: 0 30px;
 }
 .nav_logo
 {
     position: relative;
     font-family: monospace;
-    font-size: 45px;
-    font-weight: 300;
+    font-size: 55px;
+    font-weight: 400;
     text-decoration: none;
     color: var(--orange);
     text-align: center;
 }
 .nav_list
 {
-    position: relative;
-    top: 10px;
-    bottom: 0;
+    position: absolute;
+    top: 20px;
+    bottom: 800px;
     right: 0;
     left: 0;
     background-color: #2c2b47;
-    padding: 40px 0;
+    padding:0;
     display: grid;
     place-content: center;
     text-align: center;
@@ -55,11 +56,17 @@ body
     list-style: none;
     color: #fff;
 }
+.nav_item
+{
+    justify-content: space-between;
+    width: 100px;
+    height: 60px;
+}
 .nav_link
 {
     text-decoration: none;
     color: #fff;
-    font-weight: 900;
+    font-weight: 500;
     transition: .1s;
 }
 .nav_link:hover
@@ -81,29 +88,34 @@ body
 {
     width: 100%;
     display: block;
-    max-width: 400px;
-    margin: 0 auto;
+    max-width: 600px;
+    margin: 0 250px;
 }
 .header_text
 {
     display: grid;
     gap: 3rem;
-    text-align: center;
-    padding-bottom: 70px;
+    padding-bottom: 80px;
 }
 .header_title
 {
     font-size: 4rem;
     color: #ff7143;
+    display: flex;
+    width: 500px;
+    justify-content: center;
 }
 .header_title2
 {
-    line-height: 1.5;
-    font-weight: 500;
-    margin-bottom: 3.5rem;
+    line-height: 3;
+    font-weight: 800;
+    margin-bottom: 0.5rem;
+    display: flex;
+    justify-content: center;
 }
 .header_cta
 {
+    margin: 0 130px;
     text-decoration: none;
     color: #fff;
     font-size: 150%;
@@ -117,62 +129,76 @@ body
     display: flex;
     flex-direction: column;
     gap: 4rem;
-    margin-top: 200px;
+    margin: 200px 200px 200px;
 }
 .About_imagen img
 {
-    display: block;
-    margin: 0 auto;
+    margin: 0px auto;
     width: 100%;
-    max-width: 380px;
-    object-fit: cover;
-    object-position: bottom;
+    max-width: 600px;
 }
 .About_text
 {
-    text-align: center;
-    display: grid;
-    gap: 2rem;
+    margin: 20px 100px;
+    padding: auto;
+    max-width: 50%;
 }
 .subtitle
 {
-    text-align: center;
-    font-size: 2.1rem;
+    margin: 10px;
+    width: 750px;
+    font-weight: 500;
+    color: #ff7143;
+    font-size: 5px;
 }
 .subtitle2
 {
-    text-align: center;
-    padding: 0;
-    font-size: 18px;
-    color: #ff7143;
+    margin: 0 10px;
+    font-size: 70px;
+    font-weight: 500;
+    width: 700px;
 }
 .learn_container
 {
-    margin-top: 200px;
+    margin: 100px;
+    width: 90%;
 }
 .learn_container .subtitle3
 {
     text-align: center;
-    padding: 0;
-    font-size: 18px;
+    font-size: 25px;
+    font-weight: 500;
     color: #ff7143;
 }
 .learn_container .subtitle5
 {
     text-align: center;
-    font-size: 2.1rem;
+    margin: 10px;
+    font-size: 70px;
+    font-weight: 500;
 }
 .tarjeta
 {
     background: #ffefe8;
+    border: 50px solid #ffefe8;
+    width: 50%;
+    border-radius: 50px;
     display: block;
     margin: auto;
+    transform: translateX(-0.5%);
+    transition: 0.5s ease-in-out;
+}
+.tarjeta:hover
+{
+    transform: translateY(-25px);
 }
 .articles
 {
+    padding: 10px;
     margin-top: 1rem;
     display: grid;
-    gap: .5rem;
+    gap: 7rem;
+    width: 100%;
 }
 .learn_article
 {
@@ -186,13 +212,15 @@ body
 {
     display: block;
     margin: 0 auto;
-    max-width: 250px;
+    max-width: 280px;
 }
 
 .parrafo, .parrafo1
 {
     line-height: 1.5;
     font-weight: 300;
+    font-size: 25px;
+    margin: 0 10px;
 }
 .learn_article p
 {
@@ -200,73 +228,72 @@ body
 }
 .learn_article .parrafo1
 {
-    color: red;
+    color: #ff7143;
 }
 .learn_article .learn_title
 {
     color: #000;
+    font-weight: 400;
+    font-size: 35px;
 }
 .Service
 {
     text-align: center;
-    margin-top: 200px;
+    margin: 200px 100px;
+    width: 90%;
 }
 .subtitle4
 {
     text-align: center;
-    padding: 0;
-    font-size: 18px;
+    font-size: 25px;
+    font-weight: 500;
     color: #ff7143;
 }
 .Service_text
 {
     display: grid;
-    gap: 1.5rem;
-    margin-bottom: 3rem;
+    gap: 3rem;
+    margin: 0 70px 0 70px;
+}
+.subtitle7
+{
+    text-align: center;
+    margin: 10px;
+    font-size: 70px;
+    font-weight: 500;
+}
+.subtitle3
+{
+    text-align: center;
+    font-size: 25px;
+    font-weight: 500;
+    color: #ff7143;
 }
 .Service_text img
 {
-    width: 100%;
-    max-width: 280px;
+    max-width: 300px;
     display: block;
     margin: 0 auto;
-}
-.footer1
-{
-    margin-left: 100px;
-}
-.footer_container
-{
-    margin: 50px auto;
-}
-.subtitle6
-{
-    font-weight: 500;
-    border-bottom: 2px solid #ff7143;
-    width: 20%;
-}
-.footer_contact
-{
-    margin: 5px;
-}
-
-.footer_item a
-{
-    text-decoration: none;
-    color: #fff;
 }
 .contact
 {
     text-align: center;
-    font-size: 210%;
+    font-size: 25px;
+    font-weight: 500;
+    color: #ff7143;
 }
 .item
 {
     list-style: none;
-    width: 100%;
     display: flex;
     justify-content: center;
-    margin-bottom: 50px;
+    margin: 20px;
+}
+.bx
+{
+    width: 50px;
+    margin: 10px;
+    height: 50px;
 }
 @media (min-width: 768px) 
 {
@@ -347,7 +374,7 @@ body
     .subtitle
     {
         text-align: inherit;
-        font-size: 2.1rem;
+        font-size: 20px;
     }
     .learn
     {
